alterei models urls views, add metas, retirei coisas q n estamos usando do html testem!!!

--- a/front-end/perfil.html
+++ b/front-end/perfil.html
@@ -32,7 +32,7 @@
           <li><a href="#recent-transactions">Últimas movimentações</a></li>
           <li><a href="#metas-financeiras">Metas</a></li>
           <li><a href="#adicionar-lembrete">Adicionar lembretes</a></li>
-          <li><a href="metas.html">Metas financeiras</a></li>
+          <li><a href="../back-end/usuarios/templates/usuarios/metas.html">Metas financeiras</a></li>
           <li><a href="index.html">Sair</a></li>
         </ul>
       </nav>
